basic/source/classes/sbxmod.cxx
@@ -2062,6 +2062,12 @@ ErrCode SbMethod::Call( SbxValue* pRet, SbxVariable* pCaller )
     if( bInvalid && !pMod_->Compile() )
         StarBASIC::Error( ERRCODE_BASIC_BAD_PROP_VALUE );
 
+    // tdf#143582 - clear return value of the method before calling it
+    const SbxFlagBits nSavFlags = GetFlags();
+    SetFlag(SbxFlagBits::ReadWrite | SbxFlagBits::NoBroadcast);
+    Clear();
+    SetFlags(nSavFlags);
+
     Get( aVals );
     if ( pRet )
         pRet->Put( aVals );
